--- a/besticon/iconserver/assets/not_found.html
+++ b/besticon/iconserver/assets/not_found.html
@@ -1,32 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A service finding icons on web sites">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A service finding icons on web sites" />
 
     <title>The Favicon Finder</title>
 
-    <link rel="stylesheet" href="./pure-0.5.0-min.css">
-    <link rel="stylesheet" href="./grids-responsive-0.5.0-min.css">
-    <link rel="stylesheet" href="./main-min.css">
+    <link rel="stylesheet" href="./pure-0.5.0-min.css" />
+    <link rel="stylesheet" href="./grids-responsive-0.5.0-min.css" />
+    <link rel="stylesheet" href="./main-min.css" />
 
-    <meta property="og:title"       content="The Favicon Finder" />
-    <meta property="og:description" content="A service finding icons on web sites" />
-    <meta property="og:image"       content="https://besticon-demo.herokuapp.com/apple-touch-icon.png" />
+    <meta property="og:title" content="The Favicon Finder" />
+    <meta
+      property="og:description"
+      content="A service finding icons on web sites"
+    />
+    <meta
+      property="og:image"
+      content="https://besticon-demo.herokuapp.com/apple-touch-icon.png"
+    />
 
-    <link rel="icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   </head>
 
   <body>
     <div id="layout">
-
       <div id="main">
         <div class="header">
           <div class="title">
-            <h1><a href="/" class="homelink">The Favicon Finder
-                <img class="logo" src="./icon.svg" alt='Site logo'></a>
+            <h1>
+              <a href="/" class="homelink"
+                >The Favicon Finder
+                <img class="logo" src="./icon.svg" alt="Site logo"
+              /></a>
             </h1>
           </div>
           <h2>A service finding icons on web sites</h2>
@@ -34,13 +42,14 @@
 
         <div class="content">
           <h2 class="content-subhead">404 Not found</h2>
-          <p>
-          The requested page does not exist :-(
-          </p>
+          <p>The requested page does not exist :-(</p>
 
           <p>
-          If you believe this is an error, please feel free to <a href="https://github.com/mat/besticon/issues/new">open an issue</a>
-          over at GitHub.
+            If you believe this is an error, please feel free to
+            <a href="https://github.com/sertifier/besticon/issues/new"
+              >open an issue</a
+            >
+            over at GitHub.
           </p>
         </div>
       </div>
@@ -48,12 +57,11 @@
 
     <div class="footer l-box">
       <p>
-      <a href='/'>The Favicon Finder</a> &dash; in search for icons since 2015.
-      Written in <a href='http://golang.org'>Go</a>,
-      source on <a href="https://github.com/mat/besticon">GitHub</a>.
-      &copy; 2015-2020 <a href='http://www.better-idea.org'>Matthias Lüdtke</a>.
+        <a href="/">The Favicon Finder</a> &dash; in search for icons since
+        2015. Written in <a href="http://golang.org">Go</a>, source on
+        <a href="https://github.com/sertifier/besticon">GitHub</a>. &copy;
+        2015-2020 <a href="http://www.better-idea.org">Matthias Lüdtke</a>.
       </p>
     </div>
-
   </body>
 </html>
